# XORCryptor

./: .gitignore  .gitmodules  About.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  all.h  bs_thread_pool.hpp  cli.cpp  cli.h  cli.hpp  file_manager.cpp  file_manager.h  hmac_sha256.cpp  hmac_sha256.h  install.bat  install.sh  main.cpp  task_pool.hpp  xor_cryptor.cpp  xor_cryptor.h  xor_cryptor.hpp  xor_cryptor_base.cpp  xor_cryptor_base.h  xor_cryptor_lite.cpp  xor_cryptor_lite.h
C++/: .clang-format  Makefile  README.md  main.cpp  xor-cryptor.cpp  xor-cryptor.h  xor-cryptor.hpp  xor_cryptor.cpp  xor_cryptor.h  xor_cryptor.hpp
C++/effolkronium/: random.hpp
JVM/: README.md
JVM/com/beesechurger/shank03/: Cryptor.java  XORCryptor.java
Java/: Main.java  README.md  XORCryptor.java
Java/com/beesechurger/shank03/: XORCryptor.java
Nodejs/: README.md  package.json  tsconfig.json
Nodejs/lib/: xor-crypt.ts
Nodejs/test/: test.js
src/: app.rs  cli.rs  err.rs  file_handler.rs  job.rs  logger.rs  main.rs  xrc.rs
