[package]
name = "xrc_cli"
version = "1.0.2"
edition = "2021"
authors = ["Shashank Verma <shank03>"]
license = "MIT"
description = "A cli for multi-threaded encryption/decryption of files/folder using bitwise xor"
repository = "https://github.com/shank03/XORCryptor"
readme = "README.md"
keywords = ["xor", "encrypt", "decrypt", "cli", "file"]
categories = ["cryptography", "command-line-interface", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.27"
xor_cryptor = "1.0.2"
path-absolutize = "3.0.14"
hmac = "0.12.1"
sha2 = "0.10.6"
indicatif = "0.17.2"
